--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@ De Noa
 </p>
 <p class="details_4">( Pour que la surprise soit réussie )</p>
 
+<p class="details_5">Réponse souhaitée avant <strong>le 15 juillet</strong></p>
+
 <div class="sep"></div>
 
 </body>
